# aws

./: .gitignore  PROTOTYPE_ITERATION_PLAN.md  README.md  run_backend.py
Inspection Methods Engineer Assistant — Full Tech Stack & Codebase/: .env.example  .gitignore  docker-compose.yml  run_backend.py
Inspection Methods Engineer Assistant — Full Tech Stack & Codebase/backend/: Dockerfile  requirements.txt  start_server.py
Inspection Methods Engineer Assistant — Full Tech Stack & Codebase/backend/app/: config.py  main.py
Inspection Methods Engineer Assistant — Full Tech Stack & Codebase/grafana/: Dockerfile
Inspection Methods Engineer Assistant — Full Tech Stack & Codebase/mcp-server/: server.py
Inspection Methods Engineer Assistant — Full Tech Stack & Codebase/prometheus/: prometheus.yml
Inspection Methods Engineer Assistant — Full Tech Stack & Codebase/streamlit_app/: Dockerfile  app.py  requirements.txt
api/: .env.example  README.md  requirements.txt
api/app/: __init__.py  aws.py  config.py  main.py
api/app/routers/: __init__.py  dashboard.py
api/app/schemas/: __init__.py  dashboard.py
api/app/services/: dashboard.py
backend/app/: config.py  deps.py
backend/app/mcp/: mcp_client.py
backend/app/rag/: retriever.py
grafana/dashboards/: inspection_assistant_dashboard.json
mcp-server/: README.md  pyproject.toml
prometheus/: Dockerfile
ui/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json
ui/src/: App.tsx
ui/src/components/: ActivityFeed.tsx  (+7 more)
(+23 files in other folders)
